<resources>
    <string name="app_name">Data4All</string>
    <string name="action_settings">Settings</string>
    <string name="action_camera">Camera</string>
    <string name="action_map">Map</string>
    <string name="action_help">Help</string>
    <string name="action_login">Login</string>
    <string name="action_about">About</string>
    <string name="action_licenses">Legal information</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
	<string name="ignore">Ignore</string>
	<string name="alwaysIgnore"> Always Ignore</string>
	<string name="save">Save</string>
    <string name="returnToActualPosition">My Position</string>
    <string name="returnToCamera">Camera</string>
    <string name="pointOfInterest">Point of Interest</string>
    <string name="switchMaps">Switch Maps</string>
    <string name="upload_data">Upload</string>
    <string name="startUpScreen">StartUpScreen</string>
    <string name="noDescription"></string>
    <string name="drawWay">Drawing a Way </string>
    <string name="drawPoint">Drawing a Point </string>
    <string name="drawArea">Drawing a Area </string>
    <string name="drawBuilding">Drawing a Building </string>
    <string name="redo">Redo Function</string>
    <string name="undo">Undo Function</string>
    <string name="recordTrack">Record Track</string>
    <string name="stopTrack">Stop Track</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="deleteDialog">Are you sure you want to delete this object?</string>
    <string name="resultViewAlertDialogMessage">Upload now?</string>
    <string name="doNotShowAgain">Do not show again</string>
    <string name="startRecordTrack">This will start a new track. Proceed?</string>
    <string name="stopRecordTrack">This will stop and save the current track. Proceed?</string>
    <string name="deleteImage">Delete image</string>
    <string name="deleteImageText">"Do you want to delete the taken image from the gallery?"</string>
    <string name="editTrackName">"Edit Name"</string>
    <string name="editTrackTags">"Edit Tags"</string>
    <string name="editTrackDescription">"Edit Description"</string>
    <string name="hint_edit_track_tags">"Tags must be separated by a comma"</string>
    <string name="no_network_title">Network unavailable</string>
    <string name="no_network_message">Please connect your device to the internet</string>
    <string name="usernameHint">username</string>
    <string name="passwordHint">password</string>
    <string name="loginDescription">Login to OpenStreetMap</string>
    <string name="loginButton">Sign in</string>
    <string name="registerButton">register now</string>
    <string name="osmLogo">Open-Street-Map Logo</string>
    <string name="login_username_empty">Username is empty</string>
    <string name="login_password_empty">Password is empty</string>
    <string name="login_access_dialog_title">Authentification error</string>
    <string name="login_access_dialog_mes">Username or Password may be incorrect</string>
    <string name="login_alertdialog_error">Error</string>
    <string name="login_alertdialog_nonetwork_title">Network unavailable</string>
    <string name="login_alertdialog_nonetwork_message">Please connect your device to the internet.</string>
    <string name="login_alertdialog_accessdenied_title">access denied</string>
    <string name="login_alertdialog_accessdenied_message">username or password are incorrect.</string>
    <string name="login_alertdialog_nousername">no username</string>
    <string name="login_alertdialog_nopassword">no passwort</string>
    <string name="SelectTag">Select Tag</string>
    <string name="AddAddress">Add Address</string>
    <string name="AddContact">Add Contact</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="phone">phone</string>
    <string name="fax">fax</string>
    <string name="website">website</string>
    <string name="email">email</string>
    <string name="name_lastchoice">Last Choice</string>
    <string name="selectAddress">select Address</string>
    <string name="addressNoAvailable">Address no avalaible</string>
    <string name="upload_success">Successfully uploaded</string>
    <string name="upload_caption">Upload to OpenStreetMap</string>
    <string name="upload_comment">Comment</string>
    <string name="upload_upload_text">"Objects to upload: "</string>
    <string name="upload_cancle">Cancle</string>
    <string name="CancelButton">Cancle</string>
    <string name="UploadButton">Upload</string>
    <string name="upload_to_openstreetmap">Upload to OpenStreetMap</string>
    <string name="upload_to_openstreetmap_progress">Download for %s in progress</string>
    <string name="upload_to_openstreetmap_success">Changes successfully uploaded</string>
    <string name="upload_to_openstreetmap_error">Upload failed</string>
    <string name="upload_gpstracks_text">"Recorded GPS Tracks: "</string>
    <string name="gallery_sec">"%s now"</string>
    <string name="gallery_min">"%s 1 minute"</string>
    <string name="gallery_mins">"%s minutes"</string>
    <string name="gallery_hour">"%s 1 hour"</string>
    <string name="gallery_hours">"%s hours"</string>
    <string name="gallery_yesterday">"%1$s yesterday %2$s"</string>
    <string name="gallery_delete_all">delete all</string>
    <string name="empty"> </string>
    <string name="emptyList"> This list is empty </string>
    <string name="noCamSupported">Sorry, your device has no supported camera.</string>
    <string name="noLocationFound">No Location found. Turn on location service.</string>
    <string name="retry">Cannot find the right Tag. Try Again.</string>
    <string name="noSensorData">No sensor data available. Try to start again beginning from the map.</string>
    <string name="goodSensorCalibration">All sensors are ready to go. If one or more sensors are broken a yellow exclamation mark or a red cross will appear. Clicking on it will give information how to fix the sensors. Warnings can be ignored, but that can result in wrong data for the calculation and could give wrong results of the mapped objects. </string>
    <string name="badSensorCalibration">Please slowly rotate your phone around all its axis 3 times. And/Or draw an eight shaped figure with your phone. If that does not help restart your phone. You can always take these measurements for recalibration of these sensors. Ignoring this warning can result in bad calculation and wrong data.</string>
    <string name="badSensorCalibrationM0">Magnetometer has calibrationlevel 0 out of 3. Please slowly rotate your phone around all its axis 3 times. And/Or draw an eight shaped figure with your phone. Remove all magnets from phone. If that does not help restart your phone. You can always take these measurements for recalibration of these sensors. Ignoring this warning can result in bad calculation and wrong data.</string>
    <string name="badSensorCalibrationM1">Magnetometer has calibrationlevel 1 out of 3. Please slowly rotate your phone around all its axis 3 times. And/Or draw an eight shaped figure with your phone. Remove all magnets from phone. If that does not help restart your phone. You can always take these measurements for recalibration of these sensors. Ignoring this warning can result in bad calculation and wrong data.</string>
    <string name="badSensorCalibrationM2">Magnetometer has calibrationlevel 2 out of 3. Please slowly rotate your phone around all its axis 3 times. And/Or draw an eight shaped figure with your phone. Remove all magnets from phone. If that does not help restart your phone. You can always take these measurements for recalibration of these sensors. Ignoring this warning can result in bad calculation and wrong data.</string>
    <string name="badSensorCalibrationA0">Accelerometer has calibrationlevel 0 out of 3. Please slowly rotate your phone around all its axis 3 times. And/Or draw an eight shaped figure with your phone. If that does not help restart your phone. You can always take these measurements for recalibration of these sensors. Ignoring this warning can result in bad calculation and wrong data.</string>
    <string name="badSensorCalibrationA1">Accelerometer has calibrationlevel 1 out of 3. Please slowly rotate your phone around all its axis 3 times. And/Or draw an eight shaped figure with your phone. If that does not help restart your phone. You can always take these measurements for recalibration of these sensors. Ignoring this warning can result in bad calculation and wrong data.</string>
    <string name="badSensorCalibrationA2">Accelerometer has calibrationlevel 2 out of 3. Please slowly rotate your phone around all its axis 3 times. And/Or draw an eight shaped figure with your phone. If that does not help restart your phone. You can always take these measurements for recalibration of these sensors. Ignoring this warning can result in bad calculation and wrong data.</string>
    <string name="badAcceleometerCalibrationTitle">Accelerometer needs recalibration.</string>
    <string name="badMagnetometerCalibrationTitle">Magnetometer needs recalibration.</string>
    <string name="goodSensorCalibrationTitle">Sensor are okay.</string>
    <string name="badSensorCalibrationTitle">Sensor needs recalibration.</string>
    <string name="statusNotificationHeadline">Data4All still running</string>
    <string name="statusNotification">the Data4All app is still running.</string>
    <string name="show_pwd">Show Password</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_licenses">LicensesActivity</string>
    <string name="list_tracks">Tracks</string>
    <string name="track_id">Track ID:</string>
    <string name="trackpoints">Trackpoints:</string>
    <string name="trackname">Name:</string>
    <string name="track_description">Description:</string>
    <string name="track_tags">Tags:</string>
    <string name="track_no_description">No description available</string>
    <string name="track_no_tags">No tags available</string>
    <string name="linkToFacebook"><a href="http://www.facebook.com/data4allHB">Follow us on Facebook</a></string>
    <string name="linkToTwitter"><a href="http://twitter.com/data4allHB">Follow us on Twitter</a></string>
    <string name="linkToHomepage"><a href="http://data4all.github.io/">Official Homepage</a></string>
    <string name="linkToGithub"><a href="http://github.com/Data4All/Data4All">Join us on GitHub!</a></string>
    <string name="linkToOSMCopyright"><a href="http://www.openstreetmap.org/copyright">&#169; OpenStreetMap contributors</a></string>
    <string name="linkToMapboxTOS"><a href="https://www.mapbox.com/tos/">Mapbox Terms of Service</a></string>
    <string name="linkToApacheLicense"><a href="http://www.apache.org/licenses/">Apache Licenses</a></string>
    <string name="linkToOSMDroidWiki"><a href="http://wiki.openstreetmap.org/wiki/Osmdroid">osmdroid</a></string>
    <string name="linkToOSMBonusPack"><a href="https://code.google.com/p/osmbonuspack/">OSMBonusPack</a></string>
    <string name="linkToBingMap"><a href="https://www.microsoft.com/maps/product/terms.html">BingMap</a></string>
    <string name="aboutText">We are a small team of Bachelor students from the University Of Bremen. 
        You can find out more about us and this project on the following pages: </string>
    <string name="githubFollow">Since Data4All is an Open Source project, you can join us and participate 
        on GitHub: </string>
          <string name="underlyingLicenses">The following links will redirect you to the licenses underlying this 
        application.</string>
    <string name="librariesUsed">The following libraries have been used in this application.</string>
</resources>