<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.data4all.LicensesActivity" >

    <TextView 
        android:id="@+id/underlyingLicenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/underlyingLicenses" />
    
    <TextView
        android:id="@+id/linkToOSMCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/underlyingLicenses"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/linkToOSMCopyright" />
    
    <TextView
        android:id="@+id/linkToMapboxTOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linkToOSMCopyright"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/linkToMapboxTOS" />
    
    <TextView
        android:id="@+id/linkToApacheLicense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linkToMapboxTOS"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/linkToApacheLicense" />
    
    <TextView 
        android:id="@+id/librariesUsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linkToApacheLicense"
        android:layout_marginTop="30dp"
        android:text="@string/librariesUsed" />
    
    <TextView
        android:id="@+id/linkToOSMDroidWiki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/librariesUsed"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:text="@string/linkToOSMDroidWiki" />
    
    <TextView
        android:id="@+id/linkToOSMBonusPack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linkToOSMDroidWiki"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/linkToOSMBonusPack" />
    
        <TextView
        android:id="@+id/linkToBingMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linkToOSMBonusPack"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/linkToBingMap" />

</RelativeLayout>
