<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.data4all.AboutActivity" >


    <TextView
        android:id="@+id/linkToHomepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/linkToHomepage" />
    
    <TextView
        android:id="@+id/linkToFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linkToHomepage"
        android:layout_centerInParent="true"
        android:text="@string/linkToFacebook" />
    
    <TextView
        android:id="@+id/linkToTwitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linkToFacebook"
        android:layout_centerInParent="true"
        android:text="@string/linkToTwitter" />
    
    <TextView
        android:id="@+id/linkToGithub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linkToTwitter"
        android:layout_centerInParent="true"
        android:text="@string/linkToGithub" />

</RelativeLayout>