<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bonuspack_bubble"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/bubble_image"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:contentDescription="@string/noDescription"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <io.github.data4all.widged.CustomImageButton
                android:id="@+id/bubble_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/titles"
                android:src="@drawable/arrow_left" />

            <RelativeLayout
                android:id="@+id/titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_toRightOf="@+id/bubble_left">

                <TextView
                    android:id="@+id/bubble_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxEms="17"
                    android:text="Title"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/bubble_subdescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bubble_title"
                    android:maxEms="17"
                    android:text="Description"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/bubble_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bubble_title"
                    android:maxEms="17"
                    android:text="Description"
                    android:textColor="#000000"
                    android:textSize="12dp"
                    android:visibility="gone" />
            </RelativeLayout>

            <io.github.data4all.widged.CustomImageButton
                android:id="@+id/bubble_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/titles"
                android:layout_toRightOf="@+id/titles"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>

        <Button
            android:id="@+id/bubble_edit"
            style="@style/DefaultButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/header"
            android:layout_alignRight="@+id/header"
            android:layout_below="@+id/header"
            android:background="@drawable/register_button_bg"
            android:text="@string/edit"
            android:textColor="#000000"
            android:textSize="12dp" />

        <Button
            android:id="@+id/bubble_delete"
            style="@style/DefaultButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/header"
            android:layout_alignRight="@+id/header"
            android:layout_below="@+id/bubble_edit"
            android:background="@drawable/register_button_bg"
            android:paddingLeft="5dp"
            android:text="@string/delete"
            android:textColor="#660000"
            android:textSize="12dp" />

        <Button
            android:id="@+id/bubble_moreinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/btn_moreinfo"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>